--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,9 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
 }
+
+.modal-content {
+    padding: 24px;
+    margin: auto;
+    width: 80%;
+}
