--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,10 @@
     margin: auto;
     width: 80%;
 }
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+}
