--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 }
 
 .modal-content {
+    background-color: #fff;
+    border: 1px solid black;
     padding: 24px;
     margin: auto;
     width: 80%;
