--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* ---------- Global Styles ---------- */
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
 /* ---------- Class Selector Styling ----------*/
 
 .modal {
