--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@ body {
     margin: 0;
     padding: 0;
 }
-/* ---------- Class Selector Styling ----------*/
 
+/* ---------- ID Selector Styling ----------*/ 
+
+/* ---------- Class Selector Styling ----------*/
 .modal {
     display: none;
     position: fixed;
