--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+:root {
+    --white-color: #F1EDEE
+}
 /* ---------- Global Styles ---------- */
 html,
 body {
@@ -16,6 +19,9 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
 }
 .modal-Btn {
+    background-color: #DB5461;
+    color: var(--white-color);
+    font-size: 1.5rem;
     margin: 2rem 0;
     border-style: none;
     border-radius: 0px;
