--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 :root {
-    --white-color: #F1EDEE
+    --white-color: #F1EDEE;
+    --background: #131513;
 }
 /* ---------- Global Styles ---------- */
 html,
 body {
     margin: 0;
     padding: 0;
+}
+body {
+    background-color: var(--background);
 }
 
 /* ---------- ID Selector Styling ----------*/ 
