--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,18 @@ body {
     background-color: var(--background);
 }
 th {
+    font-size: 1.5rem;
     padding-right: 10px;
     margin-left: 50px;
+}
+td {
+    font-size: 1.25rem;
 }
 td button {
     width: 100%;
     background-color: #DB5461;
     color: var(--white-color);
+    font-size: 1.25rem;
     outline: none;
     border-style: none;
     border-radius: 0px;
