--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,7 @@ td button {
     width: 25%;
 }
 .th-seperator {
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    border-right: 1px solid var(--white-color);
 }
  
     
