--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ tbody:before {line-height:1em; content:"\200C"; display:block;}
 .modal-content {
     position: relative;
     background-color: var(--dark-blue);
-    border: 1px solid black;
     padding: 24px;
     margin: auto;
     width: 80%;
@@ -66,6 +65,11 @@ tbody:before {line-height:1em; content:"\200C"; display:block;}
 .modal h1 {
     font-size: 2.5rem;
     color: var(--white-color);
+}
+.form-input {
+    color: var(--white-color);
+    font-size: 1.1rem;
+    margin-top: 1rem;
 }
 
 .close {
