--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,11 @@ tbody:before {line-height:1em; content:"\200C"; display:block;}
     position: absolute;
     top: 10px;
     right: 10px;
-    font-size: 24px;
+    font-size: 3rem;
+    color: #9FA89F;
+}
+.close:hover{
+    color: var(--background);
 }
 
 .close:hover {
